<resources>
    <string name="app_name">AFuApplication</string>
    <string name="back_title">返回</string>
    <string name="login_name">账号名称：</string>
    <string name="login_pwd">密码：</string>
    <string name="login_email">E-mail：</string>
    <string name="login_name_hint">请输入账号名称</string>
    <string name="login_pwd_hint">请输入密码</string>
    <string name="login_email_hint">请输入E-mail</string>
    <string name="login_btn">登录</string>
    <string name="register">注册</string>
    <string name="login_title">请登录</string>
    <string name="register_title">请注册</string>
    <string name="main_btn_main">首页</string>
    <string name="main_btn_talk">论坛</string>
    <string name="main_btn_mine">我的</string>
    <string name="item_detail_title_add">添加物品</string>
    <string name="item_detail_title_edit">编辑物品</string>
    <string name="item_detail_title">物品详情</string>
</resources>