<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/dimen_50"
    android:paddingEnd="@dimen/dimen_50"
    android:paddingTop="@dimen/dimen_100">

    <Button
        android:id="@+id/btn_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_main"/>

    <Button
        android:id="@+id/btn_talk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_talk"/>

    <Button
        android:id="@+id/btn_mine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_mine"/>


</LinearLayout>