<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_30"
        android:layout_marginStart="@dimen/dimen_30"
        android:textSize="@dimen/sp_20"
        android:textColor="@color/blue"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_100"
        android:textSize="@dimen/sp_40"/>

    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_70"
        android:orientation="vertical"
        android:paddingStart="@dimen/dimen_70"
        android:paddingEnd="@dimen/dimen_70">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_name"
                android:textSize="@dimen/sp_15"/>

            <EditText
                android:id="@+id/et_login_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/login_name_hint"
                android:textSize="@dimen/sp_15"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_pwd"
                android:textSize="@dimen/sp_15"/>

            <EditText
                android:id="@+id/et_login_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_29"
                android:inputType="textPassword"
                android:hint="@string/login_pwd_hint"
                android:textSize="@dimen/sp_15"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30"
            android:text="@string/login_btn"
            android:textSize="@dimen/sp_20"
            android:background="@color/blue"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:text="@string/register"
            android:textSize="@dimen/sp_20"
            android:background="@drawable/login_backgroud"
            android:textColor="@color/black"/>

    </LinearLayout>

</LinearLayout>